<resources>
    <string name="time_distance_condition">%s-%s 距离家小于%d米</string>
    <string name="xiaobai_account_login">奔腾 · 狗尾草车家互联系统 </string>
    <string name="yun_mi_account_login">奔腾 · 云米车家互联系统 </string>
    <string name="yun_mi_account_login_lable_1">请使用云米商城APP扫描二维码</string>
    <string name="yun_mi_account_login_lable_2">云米是全屋互联网家电品牌,扫码登录云米账号后,您可以\n通过车机系统远程控制您的智能设备</string>
    <string name="yun_mi_account_login_lable_3">使用方法</string>
    <string name="yun_mi_account_login_lable_4"> · 语音控制</string>
    <string name="yun_mi_account_login_lable_5">唤醒语音助手,说出您想启动的场景\n例如:"你好Yomi,智能家居启动回家场景"</string>
    <string name="yun_mi_account_login_lable_6"> · 语音控制自动执行</string>
    <string name="yun_mi_account_login_lable_7">设置家庭地址,满足距离条件时会自动执行回家/离家场景\n例如:车与家的距离小于500米时,会自动执行回家场景</string>

    <string name="xiao_mi_login_lable_1">奔腾 · 小米车家互联系统</string>
    <string name="xiao_mi_login_lable_2">扫码登录小米账号后,您可以通过车机语音系统远程控制您\n的智能设备</string>
    <string name="xiao_mi_login_lable_3">使用方法</string>
    <string name="xiao_mi_login_lable_4"> · 语音控制</string>
    <string name="xiao_mi_login_lable_5">唤醒语音助手,说出您想控制的设备\n例如:"你好Yomi,启动扫地机器人"</string>
    <string name="xiao_mi_login_lable_6">使用微信、浏览器等扫描二维码</string>

    <string name="xiaobai_account">公子小白账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login2">登录</string>
    <string name="divider_space">|</string>
    <string name="other_account_login">其他账号登录:</string>
    <string name="login_huawei_account">登录华为账号</string>
    <string name="login_xiaomi_account">登录小米账号</string>
    <string name="mi_tips_one">请用手机扫面下方二维码</string>
    <string name="mi_tips_two">（相机、浏览器、微信等扫描工具均可）</string>
    <string name="login_xiaomi">小米账号登录</string>
    <string name="mi_user_name">登录账号：%s</string>
    <string name="mi_tips_three">请用手机扫描下方二维码，登录小米帐号</string>
    <string name="mi_tips_four">未登录</string>
    <string name="execute_success">%s执行成功</string>
    <string name="out_home_mode">离家模式</string>
    <string name="go_home_mode">回家模式</string>
    <string name="already_execute_mode">已执行%s</string>
    <string name="already_close_mode">已关闭%s</string>
    <string name="mode_condition_setting">%s条件设置</string>
    <string name="hour_format">%d:00</string>
    <string name="scene_con_setting">%s条件设置</string>
    <string name="excute_fail">执行失败</string>
    <string name="excute_fail_no_net">网络异常,执行失败</string>
    <string name="excute_fail_name">%s执行失败</string>
    <string name="online">在线</string>
    <string name="off_line">离线</string>
    <string name="away_from_home_distance">距离家%s%d米</string>
    <string name="sync_fail">同步失败</string>
    <string name="sync_fail_no_net">网络异常,同步失败</string>
    <string name="sync_success">同步成功</string>
    <string name="xiaomia_login_account">登录账号：%s</string>
    <string name="xiaomia_login_out_account">退出登录</string>
    <string name="xiaomia_login_out_dialog_content">确认退出小米账号</string>

    <string name="account_not_null">账号不能为空</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="login_ing">登录中</string>
    <string name="login_out">账号退出</string>
    <string name="back_home">回家</string>
    <string name="leave_home">离家</string>
    <string name="order_setting">条件设置</string>
    <string name="login_out_tips">公子小白账号在另一处登录,如非本人操作请及时修改密码</string>
    <string name="re_login">重新登录</string>
    <string name="scene_do_success">已执行%s</string>
    <string name="please_select">请选择</string>
    <string name="please_select_address">请先设置家庭位置</string>
    <string name="scene_setting">%s条件设置</string>
    <string name="arrive_condition">距回家小于%d米&#160;&#160;&#160;%s-%s</string>
    <string name="leave_condition">距离家大于%d米&#160;&#160;&#160;%s-%s</string>
    <string name="selecte_time_error">开始时间需小于结束时间,请重新选择</string>
    <string name="refresh_code">二维码失效,请重新刷新</string>
    <string name="no_net_work">网络异常,请稍后再试</string>
    <string name="smart_home">智能家居</string>
    <string name="fetch_code_fail">获取二维码失败</string>
    <string name="error_net_fetch_code_fail">网络异常,获取二维码失败</string>
    <string name="error_net_msg">网络异常,%s</string>
    <string name="bent_smart_home">奔腾车家互联平台</string>
    <string name="cloud_mi">云米</string>
    <string name="xiaobai">公子小白</string>
    <string name="xiaomi">小米</string>
    <string name="excute_time">执行时间段</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>
    <string name="condition_setting">条件设置</string>
    <string name="auto_excute">自动执行</string>
    <string name="please_bind_robot_first">请先绑定机器人</string>
    <string name="login_fail_check">账号或密码错误</string>
    <string name="login_fail">登录失败</string>
    <string name="fetch_data_fail">获取数据失败</string>
    <string name="device_state">设备状态</string>
    <string name="excuting">正在执行...</string>
    <string name="setting">设置</string>
    <string name="set_home_address">设置家庭地址</string>
    <string name="input_home_address">请输入家庭地址</string>
    <string name="set_excute_condition">设置执行条件</string>
    <string name="when_distance_excute">当车与家距离是所选距离时,执行该场景</string>
    <string name="logout">退出登录</string>
    <string name="open_led">开灯</string>
    <string name="close_led">关灯</string>
    <string name="excute">执行</string>
    <string name="ruguo">如果</string>
    <string name="hand_excute">手动执行</string>
    <string name="jiu_excute">就执行</string>
    <string name="scene_sync">场景同步</string>
    <string name="bind_success_fetch_data">绑定成功 拉取用户数据</string>
    <string name="bind_fail">绑定失败</string>
    <string name="fetch_xiaomi_auth">获取小米授权</string>
    <string name="auth_success">授权成功</string>
    <string name="auth_fail_msg">授权失败:%s</string>
    <string name="fetch_user_data_success">拉取用户数据成功</string>
    <string name="fetch_user_data_fail">拉取用户数据失败</string>
    <string name="parse_success">解析成功</string>
    <string name="parse_fail">解析失败</string>
    <string name="logout_success">退出登录成功</string>
    <string name="logout_fail">退出登录失败</string>
    <string name="unused">未启用</string>
    <string name="support_auto_excute">支持自动执行</string>
    <string name="tip">提示</string>
    <string name="logout_accout">是否退出账号</string>
    <string name="not_home_address_to_set">未设置家庭地址,是否去设置?</string>
    <string name="to_set">去设置</string>
    <string name="go_home_con_set">回家条件设置</string>
    <string name="scan_code_login_cloudmi">扫码登录云米</string>
    <string name="distance_500">500米</string>
    <string name="distance_1000">1000米</string>
    <string name="distance_2000">2000米</string>
    <string name="distance_3000">3000米</string>
    <string name="distance_4000">4000米</string>
    <string name="distance_5000">5000米</string>
    <string name="auto_excute_for_you">已为您自动启动%s</string>
    <string name="load_code_error_retry">二维码加载失败,请点击重试</string>
    <string name="empty_content">内容为空</string>
    <string name="open_auto_excute">已开启自动执行</string>
    <string name="close_auto_excute">未开启自动执行</string>
</resources>
